@@ -31,6 +31,9 @@ Core and Builtins
 Library
 -------
 
+- Distutils now correctly identifies the build architecture as "x86_64"
+  when building on OSX 10.6 without "-arch" flags. 
+
 - Issue #7556: Distutils' msvc9compiler now opens the MSVC Manifest 
   file in text mode.
 
